Various changes for Summer intern project
Made the following changes for the Summer intern project:

-Moved rootfs from initram to the second partition of the SD card
-Added petalinux-x11 and -sdk package groups for more complete system
-Imported hw_handoff from Arty-Z7-base-SPI project

Still need to add UIO driver to kernel and device tree for Pmod controllers

--- a/Arty-Z7-20/project-spec/configs/config
+++ b/Arty-Z7-20/project-spec/configs/config
@@ -70,7 +70,7 @@ CONFIG_SUBSYSTEM_SERIAL_IP_NAME="ps7_uart_0"
 CONFIG_SUBSYSTEM_ETHERNET_PS7_ETHERNET_0_SELECT=y
 # CONFIG_SUBSYSTEM_ETHERNET_MANUAL_SELECT is not set
 # CONFIG_SUBSYSTEM_ETHERNET_PS7_ETHERNET_0_MAC_AUTO is not set
-CONFIG_SUBSYSTEM_ETHERNET_PS7_ETHERNET_0_MAC=""
+CONFIG_SUBSYSTEM_ETHERNET_PS7_ETHERNET_0_MAC="00:18:3E:0A:C5:FA"
 CONFIG_SUBSYSTEM_ETHERNET_PS7_ETHERNET_0_USE_DHCP=y
 
 #
@@ -184,12 +184,13 @@ CONFIG_SUBSYSTEM_U__BOOT_TFTPSERVER_IP="10.0.0.244"
 #
 # Image Packaging Configuration
 #
-CONFIG_SUBSYSTEM_ROOTFS_INITRAMFS=y
+# CONFIG_SUBSYSTEM_ROOTFS_INITRAMFS is not set
 # CONFIG_SUBSYSTEM_ROOTFS_INITRD is not set
 # CONFIG_SUBSYSTEM_ROOTFS_JFFS2 is not set
 # CONFIG_SUBSYSTEM_ROOTFS_NFS is not set
-# CONFIG_SUBSYSTEM_ROOTFS_SD is not set
+CONFIG_SUBSYSTEM_ROOTFS_SD=y
 # CONFIG_SUBSYSTEM_ROOTFS_OTHER is not set
+CONFIG_SUBSYSTEM_SDROOT_DEV="/dev/mmcblk0p2"
 CONFIG_SUBSYSTEM_UIMAGE_NAME="image.ub"
 CONFIG_SUBSYSTEM_DTB_PADDING_SIZE=0x1000
 CONFIG_SUBSYSTEM_COPY_TO_TFTPBOOT=y
@@ -210,7 +211,7 @@ CONFIG_SUBSYSTEM_MACHINE_NAME="template"
 #
 # TMPDIR Location
 #
-CONFIG_TMP_DIR_LOCATION="/home/digilent/sam_work/git/digilent/Petalinux-Arty-Z7-20/Arty-Z7-20/build/tmp"
+CONFIG_TMP_DIR_LOCATION="/home/digilent/sam_work/git/sbobrowicz/Petalinux-Arty-Z7-20-SPI/Arty-Z7-20/build/tmp"
 
 #
 # Parallel thread execution
@@ -242,5 +243,4 @@ CONFIG_YOCTO_NETWORK_SSTATE_FEEDS_URL="http://petalinux.xilinx.com/sswreleases/r
 #
 CONFIG_USER_LAYER_0=""
 
-
-CONFIG_SUBSYSTEM_BOOTARGS_GENERATED="console=ttyPS0,115200 earlyprintk"
+CONFIG_SUBSYSTEM_BOOTARGS_GENERATED="console=ttyPS0,115200 earlyprintk root=/dev/mmcblk0p2 rw rootwait"
