--- a/Arty-Z7-20/project-spec/meta-plnx-generated/conf/machine/plnx_arm.conf
+++ b/Arty-Z7-20/project-spec/meta-plnx-generated/conf/machine/plnx_arm.conf
@@ -11,10 +11,7 @@ EXTRA_IMAGEDEPENDS += "device-tree-generation"
 PREFERRED_PROVIDER_virtual/fsbl = "fsbl"
 EXTRA_IMAGEDEPENDS += "fsbl"
 UBOOT_MACHINE = "zynq_artyz7_config"
-INITRAMFS_IMAGE_BUNDLE = "1"
-INITRAMFS_IMAGE = "petalinux-user-image"
-IMAGE_FSTYPES_append = " tar.gz cpio cpio.gz"
-INITRAMFS_MAXSIZE = "524288"
+IMAGE_FSTYPES_append = " cpio.gz ext4 ext3 ext4.gz"
 SERIAL_CONSOLE= "115200 ttyPS0"
 MACHINE_EXTRA_RRECOMMENDS += " kernel-modules"
 MACHINE_FEATURES = "rtc ext2 ext3 vfat usbhost"
