--- a/Arty-Z7-20/components/plnx_workspace/device-tree-generation/system-conf.dtsi
+++ b/Arty-Z7-20/components/plnx_workspace/device-tree-generation/system-conf.dtsi
@@ -6,7 +6,7 @@
 
 / {
 	chosen {
-		bootargs = "console=ttyPS0,115200 earlyprintk";
+		bootargs = "console=ttyPS0,115200 earlyprintk root=/dev/mmcblk0p2 rw rootwait";
 		stdout-path = "serial0:115200n8";
 	};
 	memory {
@@ -16,7 +16,7 @@
 };
 
 &gem0 {
-	local-mac-address = [];
+	local-mac-address = [00 18 3e 0a c5 fa];
 };
 
 &qspi {
