--- a/Arty-Z7-20/project-spec/configs/config
+++ b/Arty-Z7-20/project-spec/configs/config
@@ -18,11 +18,17 @@ CONFIG_SUBSYSTEM_COMPONENT_U__BOOT_NAME_REMOTE=y
 #
 # Remote u-boot settings
 #
-CONFIG_SUBSYSTEM_COMPONENT_U__BOOT_NAME_REMOTE_DOWNLOAD_PATH="git://github.com/sbobrowicz/u-boot-xlnx.git;protocol=https"
-CONFIG_SUBSYSTEM_COMPONENT_U__BOOT_NAME_REMOTE_REFERENCE="a8fdecb560d533c2bddfa92d5c4872dccf9a7a4e"
-CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_LINUX__XLNX=y
+CONFIG_SUBSYSTEM_COMPONENT_U__BOOT_NAME_REMOTE_DOWNLOAD_PATH="git://github.com/digilent/u-boot-digilent.git;protocol=https"
+CONFIG_SUBSYSTEM_COMPONENT_U__BOOT_NAME_REMOTE_REFERENCE="47e24b32a80b2c0e1824e31537034d9e4b096e20"
+# CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_LINUX__XLNX is not set
 # CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_EXT__LOCAL__SRC is not set
-# CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_REMOTE is not set
+CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_REMOTE=y
+
+#
+# Remote linux-kernel settings
+#
+CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_REMOTE_DOWNLOAD_PATH="git://github.com/digilent/linux-digilent.git;protocol=https"
+CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_REMOTE_REFERENCE="df06bf092344aadd8108f6697c345ece25e14602"
 
 #
 # Auto Config Settings
@@ -184,13 +190,12 @@ CONFIG_SUBSYSTEM_U__BOOT_TFTPSERVER_IP="10.0.0.244"
 #
 # Image Packaging Configuration
 #
-# CONFIG_SUBSYSTEM_ROOTFS_INITRAMFS is not set
+CONFIG_SUBSYSTEM_ROOTFS_INITRAMFS=y
 # CONFIG_SUBSYSTEM_ROOTFS_INITRD is not set
 # CONFIG_SUBSYSTEM_ROOTFS_JFFS2 is not set
 # CONFIG_SUBSYSTEM_ROOTFS_NFS is not set
-CONFIG_SUBSYSTEM_ROOTFS_SD=y
+# CONFIG_SUBSYSTEM_ROOTFS_SD is not set
 # CONFIG_SUBSYSTEM_ROOTFS_OTHER is not set
-CONFIG_SUBSYSTEM_SDROOT_DEV="/dev/mmcblk0p2"
 CONFIG_SUBSYSTEM_UIMAGE_NAME="image.ub"
 CONFIG_SUBSYSTEM_DTB_PADDING_SIZE=0x1000
 CONFIG_SUBSYSTEM_COPY_TO_TFTPBOOT=y
@@ -211,7 +216,7 @@ CONFIG_SUBSYSTEM_MACHINE_NAME="template"
 #
 # TMPDIR Location
 #
-CONFIG_TMP_DIR_LOCATION="/home/digilent/sam_work/git/sbobrowicz/Petalinux-Arty-Z7-20-I2C/Arty-Z7-20/build/tmp"
+CONFIG_TMP_DIR_LOCATION="/home/digilent/sam_work/git/sbobrowicz/Petalinux-Arty-Z7-20/Arty-Z7-20/build/tmp"
 
 #
 # Parallel thread execution
@@ -242,4 +247,4 @@ CONFIG_YOCTO_NETWORK_SSTATE_FEEDS_URL="http://petalinux.xilinx.com/sswreleases/r
 # User Layers
 #
 CONFIG_USER_LAYER_0=""
-CONFIG_SUBSYSTEM_BOOTARGS_GENERATED="console=ttyPS0,115200 earlyprintk root=/dev/mmcblk0p2 rw rootwait"
+CONFIG_SUBSYSTEM_BOOTARGS_GENERATED="console=ttyPS0,115200 earlyprintk"
