Large developoment push
Large commit for more pre-release changes. Add README and ability to support
releases folder for future BSP release scripting. Also, the following changes
to config options:

Top level config changes:
	-TFTP server IP to AUTO instead of my personal IP
	-boot from SD instead of initramfs. Necessary due to larger rootfs
	-Enable "debug-tweaks" for Yocto. I forgot why.

RootFS config changes:
	-Enable fbset and fbset-modes
	-Enable core buildessential package group
	-Enable petalinux opencv package group

Kernel config changes:
	-Update CMA size to 256 MBytes
	-Minor SDSoC compatibility changes to CROSS_COMPILE and LOCALVERSION

--- a/Arty-Z7-20/project-spec/configs/config
+++ b/Arty-Z7-20/project-spec/configs/config
@@ -185,17 +185,18 @@ CONFIG_SUBSYSTEM_UBOOT_CONFIG_PETALINUX=y
 # CONFIG_SUBSYSTEM_UBOOT_CONFIG_OTHER is not set
 CONFIG_SUBSYSTEM_UBOOT_CONFIG_TARGET="zynq_artyz7_config"
 CONFIG_SUBSYSTEM_NETBOOT_OFFSET=0x10000000
-CONFIG_SUBSYSTEM_U__BOOT_TFTPSERVER_IP="10.0.0.244"
+CONFIG_SUBSYSTEM_U__BOOT_TFTPSERVER_IP="AUTO"
 
 #
 # Image Packaging Configuration
 #
-CONFIG_SUBSYSTEM_ROOTFS_INITRAMFS=y
+# CONFIG_SUBSYSTEM_ROOTFS_INITRAMFS is not set
 # CONFIG_SUBSYSTEM_ROOTFS_INITRD is not set
 # CONFIG_SUBSYSTEM_ROOTFS_JFFS2 is not set
 # CONFIG_SUBSYSTEM_ROOTFS_NFS is not set
-# CONFIG_SUBSYSTEM_ROOTFS_SD is not set
+CONFIG_SUBSYSTEM_ROOTFS_SD=y
 # CONFIG_SUBSYSTEM_ROOTFS_OTHER is not set
+CONFIG_SUBSYSTEM_SDROOT_DEV="/dev/mmcblk0p2"
 CONFIG_SUBSYSTEM_UIMAGE_NAME="image.ub"
 CONFIG_SUBSYSTEM_DTB_PADDING_SIZE=0x1000
 CONFIG_SUBSYSTEM_COPY_TO_TFTPBOOT=y
@@ -235,7 +236,7 @@ CONFIG_YOCTO_SOURCE_MIRROR_URL_SELECT_PETALINUX_DOWNLOADS=y
 # Default sstate feeds ${PETALINUX}/components/yocto always added
 #
 CONFIG_YOCTO_LOCAL_SSTATE_FEEDS_URL=""
-# CONFIG_YOCTO_ENABLE_DEBUG_TWEAKS is not set
+CONFIG_YOCTO_ENABLE_DEBUG_TWEAKS=y
 CONFIG_YOCTO_NETWORK_SSTATE_FEEDS=y
 
 #
@@ -247,4 +248,4 @@ CONFIG_YOCTO_NETWORK_SSTATE_FEEDS_URL="http://petalinux.xilinx.com/sswreleases/r
 # User Layers
 #
 CONFIG_USER_LAYER_0=""
-CONFIG_SUBSYSTEM_BOOTARGS_GENERATED="console=ttyPS0,115200 earlyprintk"
+CONFIG_SUBSYSTEM_BOOTARGS_GENERATED="console=ttyPS0,115200 earlyprintk root=/dev/mmcblk0p2 rw rootwait"
