--- a/Arty-Z7-20/project-spec/meta-user/recipes-bsp/device-tree/files/system-user.dtsi
+++ b/Arty-Z7-20/project-spec/meta-user/recipes-bsp/device-tree/files/system-user.dtsi
@@ -9,7 +9,7 @@
 	};
 
 	chosen {
-		bootargs = "console=ttyPS0,115200 earlyprintk uio_pdrv_genirq.of_id=generic-uio quiet";
+		bootargs = "console=ttyPS0,115200 earlyprintk uio_pdrv_genirq.of_id=generic-uio quiet root=/dev/mmcblk0p2 rw rootwait";
 	};
 
 	aliases {
