--- a/Arty-Z7-20/.gitignore
+++ b/Arty-Z7-20/.gitignore
@@ -1,4 +1,5 @@
 */config.old
+*/rootfs_config.old
 build/
 images/
 .petalinux/*
@@ -8,3 +9,6 @@ images/
 *.log
 
 !pre-built/**
+pre-built/linux/images/rootfs.ext4
+pre-built/linux/images/linux/
+
