--- a/Arty-Z7-20/components/plnx_workspace/device-tree-generation/system-conf.dtsi
+++ b/Arty-Z7-20/components/plnx_workspace/device-tree-generation/system-conf.dtsi
@@ -6,7 +6,7 @@
 
 / {
 	chosen {
-		bootargs = "console=ttyPS0,115200 earlyprintk";
+		bootargs = "console=ttyPS0,115200 earlyprintk root=/dev/mmcblk0p2 rw rootwait";
 		stdout-path = "serial0:115200n8";
 	};
 	memory {
