Added new app and modified libvrcDemo
libvrcDemo builds the library and places it and the header in the correct places.
samplevrc uses the libraries to compile drmdemo.c and places the resulting file
in usr/bin.

Cherry-picked c09ae12b0875dc1f5173f0df497c9b0c58cacd58
from https://github.com/mitchellorsucci/Petalinux-Arty-Z7-20

--- a/Arty-Z7-20/project-spec/meta-user/recipes-apps/libvrcDemo/files/Makefile
+++ b/Arty-Z7-20/project-spec/meta-user/recipes-apps/libvrcDemo/files/Makefile
@@ -1,14 +1,24 @@
-APP = libvrcDemo
 
-# Add any other object files to this list below
-APP_OBJS = drmdemo.c libvrc.h libvrc.c
-
-all: build
-
-build: $(APP)
-
-$(APP): $(APP_OBJS)
-	$(CC) $(LDFLAGS) -o $@ $(APP_OBJS) $(LDLIBS)
-
+APP = libvrc
+ 
+LIBSOURCES=*.c
+OUTS = *.o
+NAME := vrc
+MAJOR = 1.0
+MINOR = 1
+VERSION = $(MAJOR).$(MINOR)
+ 
+all: lib$(NAME).so
+lib$(NAME).so.$(VERSION): $(OUTS)
+	$(CC) $(LDFLAGS) $(OUTS) -shared -Wl,-soname,lib$(NAME).so.$(MAJOR) -o lib$(NAME).so.$(VERSION)
+ 
+lib$(NAME).so: lib$(NAME).so.$(VERSION)
+	rm -f lib$(NAME).so.$(MAJOR) lib$(NAME).so
+	ln -s lib$(NAME).so.$(VERSION) lib$(NAME).so.$(MAJOR)
+	ln -s lib$(NAME).so.$(MAJOR) lib$(NAME).so
+ 
+%.o: %.c
+	$(CC) $(CFLAGS) -c -fPIC $(LIBSOURCES) -isystem ./.
+ 
 clean:
-	rm -f $(APP) *.0 *~
+	rm -rf *.o *.so *.so.*
