--- a/Arty-Z7-20/project-spec/configs/config
+++ b/Arty-Z7-20/project-spec/configs/config
@@ -19,7 +19,7 @@ CONFIG_SUBSYSTEM_COMPONENT_U__BOOT_NAME_REMOTE=y
 # Remote u-boot settings
 #
 CONFIG_SUBSYSTEM_COMPONENT_U__BOOT_NAME_REMOTE_DOWNLOAD_PATH="git://github.com/digilent/u-boot-digilent.git;protocol=https"
-CONFIG_SUBSYSTEM_COMPONENT_U__BOOT_NAME_REMOTE_REFERENCE="47e24b32a80b2c0e1824e31537034d9e4b096e20"
+CONFIG_SUBSYSTEM_COMPONENT_U__BOOT_NAME_REMOTE_REFERENCE="5ebcacff3237d3e93a60cfb470e85d974db1b667"
 # CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_LINUX__XLNX is not set
 # CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_EXT__LOCAL__SRC is not set
 CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_REMOTE=y
@@ -28,7 +28,7 @@ CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_REMOTE=y
 # Remote linux-kernel settings
 #
 CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_REMOTE_DOWNLOAD_PATH="git://github.com/digilent/linux-digilent.git;protocol=https"
-CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_REMOTE_REFERENCE="df06bf092344aadd8108f6697c345ece25e14602"
+CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_REMOTE_REFERENCE="6469e25f5d48f70018e01438d77435a40200158d"
 
 #
 # Auto Config Settings
@@ -190,13 +190,12 @@ CONFIG_SUBSYSTEM_U__BOOT_TFTPSERVER_IP="AUTO"
 #
 # Image Packaging Configuration
 #
-# CONFIG_SUBSYSTEM_ROOTFS_INITRAMFS is not set
+CONFIG_SUBSYSTEM_ROOTFS_INITRAMFS=y
 # CONFIG_SUBSYSTEM_ROOTFS_INITRD is not set
 # CONFIG_SUBSYSTEM_ROOTFS_JFFS2 is not set
 # CONFIG_SUBSYSTEM_ROOTFS_NFS is not set
-CONFIG_SUBSYSTEM_ROOTFS_SD=y
+# CONFIG_SUBSYSTEM_ROOTFS_SD is not set
 # CONFIG_SUBSYSTEM_ROOTFS_OTHER is not set
-CONFIG_SUBSYSTEM_SDROOT_DEV="/dev/mmcblk0p2"
 CONFIG_SUBSYSTEM_UIMAGE_NAME="image.ub"
 CONFIG_SUBSYSTEM_DTB_PADDING_SIZE=0x1000
 CONFIG_SUBSYSTEM_COPY_TO_TFTPBOOT=y
@@ -208,6 +207,10 @@ CONFIG_SUBSYSTEM_TFTPBOOT_DIR="/var/lib/tftpboot"
 CONFIG_SUBSYSTEM_HOSTNAME="Arty-Z7-20"
 CONFIG_SUBSYSTEM_PRODUCT="Arty-Z7-20"
 CONFIG_SUBSYSTEM_FW_VERSION="1.00"
+
+#
+# DTG Settings
+#
 CONFIG_SUBSYSTEM_MACHINE_NAME="template"
 
 #
@@ -217,7 +220,7 @@ CONFIG_SUBSYSTEM_MACHINE_NAME="template"
 #
 # TMPDIR Location
 #
-CONFIG_TMP_DIR_LOCATION="/home/mitchellorsucci/myRepos/Petalinux-Arty-Z7-20/Arty-Z7-20/build/tmp"
+CONFIG_TMP_DIR_LOCATION="/home/digilent/work/git/Petalinux-Arty-Z7-20/Arty-Z7-20/build/tmp"
 
 #
 # Parallel thread execution
@@ -242,11 +245,10 @@ CONFIG_YOCTO_NETWORK_SSTATE_FEEDS=y
 #
 # Network sstate feeds URL
 #
-CONFIG_YOCTO_NETWORK_SSTATE_FEEDS_URL="http://petalinux.xilinx.com/sswreleases/rel-v2017.1/arm/sstate-cache"
+CONFIG_YOCTO_NETWORK_SSTATE_FEEDS_URL="http://petalinux.xilinx.com/sswreleases/rel-v2017.2/arm/sstate-cache"
 
 #
 # User Layers
 #
 CONFIG_USER_LAYER_0=""
-
-CONFIG_SUBSYSTEM_BOOTARGS_GENERATED="console=ttyPS0,115200 earlyprintk root=/dev/mmcblk0p2 rw rootwait"
+CONFIG_SUBSYSTEM_BOOTARGS_GENERATED="console=ttyPS0,115200 earlyprintk"
