--- a/Arty-Z7-20/components/plnx_workspace/device-tree-generation/system-conf.dtsi
+++ b/Arty-Z7-20/components/plnx_workspace/device-tree-generation/system-conf.dtsi
@@ -6,12 +6,8 @@
 
 / {
 	chosen {
-		bootargs = "console=ttyPS0,115200 earlyprintk root=/dev/mmcblk0p2 rw rootwait";
+		bootargs = "console=ttyPS0,115200 earlyprintk";
 		stdout-path = "serial0:115200n8";
-	};
-	memory {
-		device_type = "memory";
-		reg = <0x0 0x20000000>;
 	};
 };
 
