Fix MAC Address read and add uEnv.txt support in U-boot
Fix the automatic read of the Arty Z7 MAC address from the OTP region
of the Quad SPI Flash. Also enable the ability to override u-boot
environment variables using a file called uEnv.txt on the SD card
during SD boot. This allows easy override of common variables, such
as the bootargs.

README is also updated to reflect these changes.

--- a/Arty-Z7-20/components/plnx_workspace/device-tree-generation/plnx_arm-system.dts
+++ b/Arty-Z7-20/components/plnx_workspace/device-tree-generation/plnx_arm-system.dts
@@ -232,7 +232,7 @@
 			u-boot,dm-pre-reloc;
 
 			flash@0 {
-				compatible = "s25fl128s";
+				compatible = "micron,m25p80", "s25fl128s", "spi-flash";
 				reg = <0x0>;
 				#address-cells = <0x1>;
 				#size-cells = <0x1>;
@@ -1019,11 +1019,5 @@
 		drv-vbus;
 		linux,phandle = <0x8>;
 		phandle = <0x8>;
-	};
-
-	pwm@0 {
-		compatible = "pwm-gpio";
-		#pwm-cells = <0x3>;
-		pwm-gpios = <0x5 0x36 0x1 0x5 0x37 0x1 0x5 0x38 0x1 0x5 0x39 0x1 0x5 0x3a 0x1 0x5 0x3b 0x1>;
 	};
 };
