Changed PWM and GPIO device-tree nodes to 'generic-uio'

--- a/Arty-Z7-20/project-spec/meta-user/recipes-bsp/device-tree/files/system-user.dtsi
+++ b/Arty-Z7-20/project-spec/meta-user/recipes-bsp/device-tree/files/system-user.dtsi
@@ -67,6 +67,22 @@
 	compatible = "generic-uio";	
 };
 
+&axi_gpio_led {
+	compatible = "generic-uio";
+};
+
+&axi_gpio_shield_1 {
+	compatible = "generic-uio";
+};
+
+&axi_gpio_sw {
+	compatible = "generic-uio";
+};
+
+&PWM_0 {
+	compatible = "generic-uio";
+};
+
 &qspi {
 	u-boot,dm-pre-reloc;
 };
