--- a/Arty-Z7-20/project-spec/configs/config
+++ b/Arty-Z7-20/project-spec/configs/config
@@ -218,6 +218,7 @@ CONFIG_SUBSYSTEM_MACHINE_NAME="template"
 #
 # TMPDIR Location
 #
+CONFIG_TMP_DIR_LOCATION="/home/mitchellorsucci/Petalinux-Arty-Z7-20/Arty-Z7-20/build/tmp"
 
 #
 # Parallel thread execution
